AC_INIT([czar], [0.1.0], [jordanearls.92@gmail.com], [czar], [https://github.com/j0rdn/czar])
AC_CONFIG_AUX_DIR([autotools])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.15 subdir-objects -Wall -Werror no-define])

: ${CFLAGS="-O3 -Wall -Wextra -Wpedantic -std=c11"}
AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
